# mpl-utils

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  readthedocs.yaml  requirements-frozen.txt  requirements.txt
docs/: Makefile  make.bat
docs/source/: conf.py  examples.rst  index.rst  installation.rst
docs/source/_examples/: add_abc0.py  add_abc1.py  add_abc2.py  add_colorbar.py  asymmetric_colorbars.py  colors.py  convert_to_steps.py  crop_colormap.py  layout_compressed.py  layout_fixed.py  legend_dash_dotted.py  legend_dashed.py  okabe_ito_accent.py  square_polar_axes.py
docs/source/_examples/color_palettes/: okabe_ito.py  okabe_ito_accent.py  okabe_ito_mute.py  okabe_ito_muted.py
docs/source/_examples/colormaps/: asymmetric_colorbars.py  atom.py
docs/source/_examples/layout/: add_colorbar0.py  add_colorbar1.py  add_column_pad_pts.py  add_margins_pts.py  add_margins_pts_colorbars.py  add_row_pad_pts.py  make_me_nice_default.py  make_me_nice_fix_figwidth.py  trimmedlayoutengine.py  trimmedlayoutengine2.py
docs/source/_examples/misc/: convert_to_steps.py
docs/source/_examples/themes/: add_abc0.py  add_abc1.py  add_abc2.py  crop_colormap.py  (+4 more)
docs/source/api_reference/: index.rst
src/mplutils/: __init__.py  _constants.py  _core.py  _fix_layout.py  _fixed_layout.py  _layout.py  _make_me_nice.py  _misc.py  _themes.py  _trimmed_constrained_layout_engine.py  _trimmed_layout.py  _trimmed_layout_engine.py  _utils.py  _version.py  colors.py  constants.py  core.py  errors.py  fixed_layout_engine.py  layout.py  layout2.py  layout_engine.py  utils.py
(+34 files in other folders)
