[project]
name = "mplutils"
version = "0.2.0-dev" # also update _version.py
authors = [{ name = "Max Kircher" }]
description = """
    A collection of utility methods to manipulate matplotlib figures.
"""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "matplotlib"]

[project.urls]
"Repository" = "https://github.com/frekm/mpl-utils"
# "Documentation" = "https://atomphys-atompy.readthedocs.io/en/latest/"
