[project]
name = "mplutils"
version = "0.5.0-dev"
authors = [{ name = "Max Kircher" }]
description = """
    A collection of utility methods to manipulate matplotlib figures.
"""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "matplotlib"]

[project.urls]
"Repository" = "https://github.com/frekm/mpl-utils"
"Documentation" = "https://mpl-utils.readthedocs.io/en/latest/"
